--- a/ecommerce-store/package.json
+++ b/ecommerce-store/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.1",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -20,6 +21,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-paypal-button-v2": "^2.6.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
