--- a/ecommerce-store/netlify.toml
+++ b/ecommerce-store/netlify.toml
@@ -1,4 +1,10 @@
 [[redirects]]
+  from = "/Men"
+  to = "/Womenlistings"
+  status = 301
+  force = true
+
+[[redirects]]
   from = "/Menlistings"
   to = "/Womenlistings"
   status = 200
