--- a/ecommerce-store/netlify.toml
+++ b/ecommerce-store/netlify.toml
@@ -4,13 +4,8 @@
   status = 301
   force = true
 
-[[redirects]]
-  from = "/Menlistings"
-  to = "/Womenlistings"
-  status = 200
-  force = true
-
    [[redirects]]
-  from = "/Menlistings/*"
-  to = "/Womenlistings"
+  from = "/menlistings/*"
+  to = "/womenlistings"
   status = 200
+
