--- a/ecommerce-store/netlify.toml
+++ b/ecommerce-store/netlify.toml
@@ -3,3 +3,9 @@
   to = "/Womenlistings"
   status = 200
   force = true
+
+  [[redirects]]
+  from = "/Menlistings/*"
+  to = "/Womenlistings"
+  status = 200
+  force = true
